--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-portfolio",
+  "homepage": "https://softbesta.github.io/OnePagePortfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.5.2",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^1.3.0",
