--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "My Portfolio",
-  "name": "My portfolio website",
+  "short_name": "Artur Guillou",
+  "name": "Artur Guillou",
   "icons": [
     {
       "src": "favicon.png",
